--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./src/css/top.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -47,7 +46,7 @@
         </section>
         <div class="container">
           <section class="note">
-            <p><span>トップページ</span>><span>お知らせ</span>><span>セミナー情報 </span>お知らせのタイトル</p>
+            <p><span>トップページ</span> > <span>お知らせ</span> > <span>セミナー情報 </span> > お知らせのタイトル</p>
           </section>
           <section class="content">
             <div class="table">
@@ -57,14 +56,14 @@
               <table>
                 <tr>
                   <th width="20%">日程</th>
-                  <th>2021年6月1日(火)　10:00〜12:00</th>
+                  <td>2021年6月1日(火)　10:00〜12:00</td>
                 </tr>
                 <tr>
-                  <td>セミナー形態</td>
+                  <th>セミナー形態</th>
                   <td>オンラインセミナー</td>
                 </tr>
                 <tr>
-                  <td>対象</td>
+                  <th>対象</th>
                   <td>
                     <li>不動産オーナー様</li>
                     <li>不動産運用にご興味のある方</li>
@@ -72,19 +71,19 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>会場</td>
+                  <th>会場</th>
                   <td>オンライン ※お申し込み後、参加方法の詳細をメールでご案内いたします。</td>
                 </tr>
                 <tr>
-                  <td>参加費</td>
+                  <th>参加費</th>
                   <td>無料（事前申込制）</td>
                 </tr>
                 <tr>
-                  <td>定員</td>
+                  <th>定員</th>
                   <td>10名 ※申込多数の場合には抽選となります。</td>
                 </tr>
                 <tr>
-                  <td>セミナー内容</td>
+                  <th>セミナー内容</th>
                   <td>あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、
                     うつくしい森で飾られたモリーオ市、郊外のぎらぎらひかる草の波。 
                     またそのなかでいっしょになったたくさんのひとたち、ファゼーロとロザーロ、
