--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
           </div>            
         </section>
         <section class="paper">
-          <p>宅地建物取引業者 岩手県知事免許 (2) 第 2407 号 / 建設業岩手県知事許可 (般 -27)第 70175 号 / 賃貸住宅管理業者 国土交通大臣 (1) 第 2515 号</p>
+          <p>宅地建物取引業者 岩手県知事免許 (2) 第 2407 号 /</p>
+          <p>建設業岩手県知事許可 (般 -27)第 70175 号 /</p>  
+          <p>賃貸住宅管理業者 国土交通大臣 (1) 第 2515 号</p>
         </section>
         <section class="footer">
           <p>© 2019 SEICO Corporation. All Rights Reserved.</p>
