--- a/index.html
+++ b/index.html
@@ -183,5 +183,6 @@
           <p>© 2019 SEICO Corporation. All Rights Reserved.</p>
         </section>
     </div> 
+    <script src="./src/scripts/app.js"></script>
 </body>
 </html>
